# HumanlikeHearing

./: LICENSE  README.md  requirements.txt  setup.cfg
examples/: Analyse Results.ipynb  flags.py  run.py
humanlikehearing/: __init__.py  asrsystem.py  dataset.py  filtertools.py  sound.py  testbattery.py  version.py
