[metadata]
name = humanlikehearing
version = 0.1.0
author = Lotte Weerts
author_email = lotteweerts@gmail.com
description = Psychometric testing on Automatic Speech Recognition systems
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/lotteweerts/humanlikehearing
project_urls = 
    Bug Tracker = https://github.com/lotteweerts/humanlikehearing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.5
install_requires = 
    scipy >= 1.0.0
    numpy >= 1.15.0
    pandas >= 0.13
    absl-py >= 0.10.0
    PyPDF2 >= 1.26.0
    librosa >= 0.7.0
    nltk >= 3.5
    praat-parselmouth >= 0.3.3
    SoundFile >= 0.10.3.post1
    webrtcvad-wheels>=2.0.10.post2
[sdist]
formats = zip, gztar